--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-08-19.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-08-19.md
@@ -2,12 +2,12 @@
 description: Versionsinformation för visningsprogram (5.13.1)
 solution: Experience Manager
 title: Versionsinformation för visningsprogram (5.13.1)
-feature: Dynamic Media Classic,visningsprogram,SDK/API
+feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 266805aa-29a6-4e95-a7b8-43d95beeea36
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: c99aac44711852d8ac661878e11ce0b19d3dbf60
 workflow-type: tm+mt
-source-wordcount: '556'
+source-wordcount: '554'
 ht-degree: 0%
 
 ---
@@ -37,7 +37,7 @@ Paketet innehåller följande:
    * genericZoomMobile
    * mixMedia
 
-* AEM Dynamic Media Viewers
+* Adobe Experience Manager Dynamic Media Viewers
 
    * CarouselViewer
    * InteractiveImage
@@ -55,7 +55,7 @@ Paketet innehåller följande:
 ## Felkorrigeringar för 5.13.1 {#section-50e7ea1e01dd4e1fa9c8b3e00eb002b4}
 
 * Korrigerade felaktiga långtidsskärmar.
-* Löste ett problem där sidan rullades på Apple-enheter i helskärmsläge (som körs på iOS 12 och senare).
+* Löste problem med helskärmsläge där sidan rullades på Apple-enheter (körs på iOS 12 och senare).
 
 ## Kända fel och begränsningar för 5.13.1 {#section-af67bc1734844f31a89a09004b558c6e}
 
@@ -96,13 +96,13 @@ Paketet innehåller följande:
 
 **HTML5-video**
 
-* Det kan uppstå ett `max size`-fel i förhandsvisningsbilden. Du kan behöva öka gränsvärdet för Image Serving Publish.
+* Det kan uppstå ett `max size`-fel i förhandsvisningsbilden. I så fall måste du öka gränsvärdet för Image Serving Publish.
 * Videobeskrivningar kräver en företagsregeluppsättning om HTML-värdsidan hanteras från en extern server (inte en Dynamic Media-server). Kontakta teknisk support.
 * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
-* På iPad- eller Android-enheter kan en svart ram visas i stället för en förhandsvisningsbild.
-* På iPad- eller Android-enheter kan en svart bildruta blinka på skärmen när visningsprogrammet läses in.
+* På iPad- eller Android™-enheter kan en svart ram visas i stället för en förhandsvisningsbild.
+* På iPad- eller Android™-enheter kan en svart bildruta blinka på skärmen när visningsprogrammet läses in.
 * På iPad-enheter visas svarta kanter på sidan av VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig.
 * I iPad kan den sista videobildrutan förvrängas med iOS 7.
 * I Chrome-, Firefox- och Internet Explorer-webbläsare kan det förekomma makroblockering vid videosökning i HLS-direktuppspelningsläge.
-* Affischbilden kanske inte visas i Microsoft Edge-webbläsaren för första gången.
+* Affischbilden kanske inte visas i webbläsaren Microsoft® Edge för första gången.
 * När progressiv uppspelning används kan förhandsvisningsbilden döljas efter att videon har lästs in i Internet Explorer 9.
