--- a/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-17-18.md
+++ b/help/aem-viewers-ref/c-release-notes/c-archive/c-rn-07-17-18.md
@@ -1,13 +1,13 @@
 ---
+title: Versionsinformation om Dynamic Media Viewer (5.10.1)
 description: Versionsinformation för visningsprogram (5.10.1)
 solution: Experience Manager
-title: Versionsinformation för visningsprogram (5.10.1)
-feature: Dynamic Media Classic,visningsprogram,SDK/API
+feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 4df87531-b27a-4a52-9e35-2e7cda0f9742
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: c99aac44711852d8ac661878e11ce0b19d3dbf60
 workflow-type: tm+mt
-source-wordcount: '507'
+source-wordcount: '504'
 ht-degree: 0%
 
 ---
@@ -65,13 +65,13 @@ ht-degree: 0%
 
 **Video**
 
-* Det kan uppstå ett `max size`-fel i förhandsvisningsbilden. Du kan behöva öka gränsvärdet för Image Serving Publish.
+* Det kan uppstå ett `max size`-fel i förhandsvisningsbilden. I så fall måste du öka gränsvärdet för Image Serving Publish.
 * Videobeskrivningar kräver en företagsregeluppsättning om HTML-värdsidan hanteras från en extern server (inte en Dynamic Media-server). Kontakta teknisk support.
 * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
-* På iPad- eller Android-enheter kan en svart ram visas i stället för en förhandsvisningsbild.
-* På iPad- eller Android-enheter kan en svart bildruta blinka på skärmen när visningsprogrammet läses in.
+* På iPad- eller Android™-enheter kan en svart ram visas i stället för en förhandsvisningsbild.
+* På iPad- eller Android™-enheter kan en svart bildruta blinka på skärmen när visningsprogrammet läses in.
 * På iPad-enheter visas svarta kanter på sidan av VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig.
 * I iPad kan den sista videobildrutan förvrängas med iOS 7.
 * I Chrome-, Firefox- och Internet Explorer-webbläsare kan det förekomma makroblockering vid videosökning i HLS-direktuppspelningsläge.
-* Affischbilden kanske inte visas i Microsoft Edge-webbläsaren för första gången.
+* Affischbilden kanske inte visas i webbläsaren Microsoft® Edge för första gången.
 * När progressiv uppspelning används kan förhandsvisningsbilden döljas efter att videon har lästs in i Internet Explorer 9.
