--- a/help/aem-viewers-ref/c-release-notes/c-rn-01-13-21.md
+++ b/help/aem-viewers-ref/c-release-notes/c-rn-01-13-21.md
@@ -1,11 +1,11 @@
 ---
-title: Versionsinformation för visningsprogram (5.15.3)
-description: Versionsinformation för Dynamic Media Viewer.
+title: Versionsinformation om Dynamic Media Viewer (5.15.3)
+description: Versionsinformation för visningsprogram för Adobe Dynamic Media.
 solution: Experience Manager
-feature: Dynamic Media Classic,visningsprogram,SDK/API
+feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 exl-id: 00a1069f-8cfe-41b4-aecd-33c2b6f9bcca
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: c99aac44711852d8ac661878e11ce0b19d3dbf60
 workflow-type: tm+mt
 source-wordcount: '626'
 ht-degree: 0%
@@ -31,7 +31,7 @@ Paketet innehåller följande:
    * VideoViewer
    * ZoomViewer
 
-* **AEM Dynamic Media Viewers**
+* **Adobe Experience Manager Dynamic Media Viewers**
 
    * CarouselViewer
    * DimensionalViewer
@@ -108,13 +108,13 @@ Paketet innehåller följande:
 
 ### HTML5-video {#html5-video}
 
-* Det kan uppstå ett `max size`-fel i förhandsvisningsbilden. Du kan behöva öka gränsvärdet för Image Serving Publish.
+* Det kan uppstå ett `max size`-fel i förhandsvisningsbilden. I så fall måste du öka gränsvärdet för Image Serving Publish.
 * Videobeskrivningar kräver en företagsregeluppsättning om HTML-värdsidan hanteras från en extern server (inte en Dynamic Media-server). Kontakta teknisk support.
 * Analysspårning kan rapportera felaktig uppspelningsprocent på grund av buffring.
-* På iPad- eller Android-enheter kan en svart ram visas i stället för en förhandsvisningsbild.
-* På iPad- eller Android-enheter kan en svart bildruta blinka på skärmen när visningsprogrammet läses in.
+* På iPad- eller Android™-enheter kan en svart ram visas i stället för en förhandsvisningsbild.
+* På iPad- eller Android™-enheter kan en svart bildruta blinka på skärmen när visningsprogrammet läses in.
 * På iPad-enheter visas svarta kanter på sidan av VideoPlayer-komponenten när bakgrunden är inställd på vit/genomskinlig.
 * I iPad kan den sista videobildrutan förvrängas med iOS 7.
 * I Chrome-, Firefox- och Internet Explorer-webbläsare kan det förekomma makroblockering vid videosökning i HLS-direktuppspelningsläge.
-* Affischbilden kanske inte visas i Microsoft Edge-webbläsaren för första gången.
+* Affischbilden kanske inte visas i webbläsaren Microsoft® Edge för första gången.
 * När progressiv uppspelning används kan förhandsvisningsbilden döljas efter att videon har lästs in i Internet Explorer 9.
