--- a/help/aem-viewers-ref/c-release-notes/c-rn-04-06-21.md
+++ b/help/aem-viewers-ref/c-release-notes/c-rn-04-06-21.md
@@ -1,17 +1,17 @@
 ---
-title: Versionsinformation för visningsprogram (5.16.1)
-description: Versionsinformation för Dynamic Media Viewer.
+title: Versionsinformation om Dynamic Media Viewer (5.16.1)
+description: Versionsinformation för visningsprogram för Adobe Dynamic Media.
 solution: Experience Manager
-feature: Dynamic Media Classic,visningsprogram,SDK/API
+feature: Dynamic Media Classic,Viewers,SDK/API
 role: Developer,User
 hide: true
 hidefromtoc: true
 robots: noindex
 googlebot: noindex
 exl-id: 636c8c11-9c79-41f3-8101-29fca0fab074
-source-git-commit: 206e4643e3926cb85b4be2189743578f88180be7
+source-git-commit: c99aac44711852d8ac661878e11ce0b19d3dbf60
 workflow-type: tm+mt
-source-wordcount: '624'
+source-wordcount: '621'
 ht-degree: 0%
 
 ---
@@ -64,7 +64,7 @@ Paketet innehåller följande:
 * Stöd för sanering av URL-konfigurationsparametrar har lagts till. Popup-visningsprogram ignorerar nu URL-konfigurationsparametrar som är definierade i frågesträngen. Den här funktionen utförs om domänen i parameterns värde inte matchar basvisningsdomänen eller inte tillhör en lista över tillåtna domäner.
 * Uppdaterad produktprofilering för Adobe Experience Viewer.
 * Fast tangentbordsnavigering i listrutan SocialShare när en av underkomponenterna är inaktiverad i CSS.
-* Korrigerat JavaScript™-fel vid användning av förhandsgranskning på iOS9 och äldre enheter.
+* Korrigerat JavaScript-fel vid användning av förhandsgranskning på iOS9 och äldre enheter.
 * Korrigerad felaktig rapportering av den aktuella videouppspelningstiden som NaN.<!--  (CQ-4310148) -->
 
 ## Adobe kundtjänst {#customer-care}
